experimental/parser/testdata/parser/field/any-tag.proto.stderr.txt
error: unexpected range expression in message field tag
  --> testdata/parser/field/any-tag.proto:10:15
   |
10 |     int32 x = 10 to max;
   |               ^^^^^^^^^

encountered 1 error
